<resources>
    <string name="app_name">Door Panel</string>
    <string name="doNotDisturbTextView">PLEASE DO NOT DISTURB!</string>
    <string name="roomNumberTextView">A113</string>
    <string name="btnUpLeftNameOfEmployee">Johann Smith</string>
    <string name="btnBottomLeftNameOfEmployee">Timo Nolle</string>
    <string name="btnUpRightNameOfEmployee">Mike Rosmann</string>
    <string name="btnBottomRightNameOfEmployee">Chris Bolton</string>
    <string name="helpInfoTextView">To view office hours or make an appointment click on the person\'s name</string>
    <string name="addressTextView">S2|02 A113 \nHochschulstraße 10 \n64289 Darmstadt</string>
    <string name="officeHours1TextView">Monday-Friday \n8:30 to 17:30</string>
    <string name="telephone1TextView">+49 6151 16-23200</string>
    <string name="email1TextView">bravo.iptk@gmail.com</string>
    <string name="btnBack">Back</string>
    <string name="btnLogin">Login</string>
    <string name="tu_logo">tu logo</string>

</resources>
