<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_dark"
    tools:context=".TabletStartWindowActivity">

    <TextView
        android:id="@+id/doNotDisturbTextView"
        android:layout_width="781dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/doNotDisturbTextView"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="56sp"
        app:layout_constraintBottom_toTopOf="@+id/btnUpLeftNameOfEmployee"
        app:layout_constraintEnd_toStartOf="@+id/darkRedLinearLayout"
        app:layout_constraintHorizontal_bias="0.997"
        app:layout_constraintStart_toEndOf="@+id/btnUpLeftNameOfEmployee"
        app:layout_constraintTop_toBottomOf="@+id/whiteHeaderLinearLayout"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/darkRedLinearLayout"
        android:layout_width="417dp"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/dark_red"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whiteHeaderLinearLayout">

    </LinearLayout>

    <TextView
        android:id="@+id/helpInfoTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/helpInfoTextView"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/darkRedLinearLayout"
        app:layout_constraintEnd_toEndOf="@+id/darkRedLinearLayout"
        app:layout_constraintStart_toStartOf="@+id/darkRedLinearLayout"
        app:layout_constraintTop_toBottomOf="@+id/whiteHeaderLinearLayout" />

    <Button
        android:id="@+id/btnBottomLeftNameOfEmployee"
        android:layout_width="0dp"
        android:layout_height="116dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:onClick="onClickBottomLeft"
        android:text="@string/btnBottomLeftNameOfEmployee"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnBottomRightNameOfEmployee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpLeftNameOfEmployee"
        app:layout_constraintVertical_bias="0.514" />

    <Button
        android:id="@+id/btnUpLeftNameOfEmployee"
        android:layout_width="0dp"
        android:layout_height="116dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="32dp"
        android:onClick="onClickUpLeft"
        android:text="@string/btnUpLeftNameOfEmployee"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnUpRightNameOfEmployee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whiteHeaderLinearLayout" />

    <Button
        android:id="@+id/btnUpRightNameOfEmployee"
        android:layout_width="0dp"
        android:layout_height="116dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="32dp"
        android:onClick="onClickUpRight"
        android:text="@string/btnUpRightNameOfEmployee"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/darkRedLinearLayout"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toEndOf="@+id/btnUpLeftNameOfEmployee"
        app:layout_constraintTop_toBottomOf="@+id/whiteHeaderLinearLayout" />

    <Button
        android:id="@+id/btnBottomRightNameOfEmployee"
        android:layout_width="0dp"
        android:layout_height="116dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:onClick="onClickBottomRight"
        android:text="@string/btnBottomRightNameOfEmployee"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/darkRedLinearLayout"
        app:layout_constraintStart_toEndOf="@+id/btnBottomLeftNameOfEmployee"
        app:layout_constraintTop_toBottomOf="@+id/btnUpRightNameOfEmployee" />

    <LinearLayout
        android:id="@+id/whiteHeaderLinearLayout"
        android:layout_width="0dp"
        android:layout_height="147dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <ImageView
        android:id="@+id/tuLogoImageView"
        android:layout_width="245dp"
        android:layout_height="93dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/tu_logo"
        app:layout_constraintBottom_toTopOf="@+id/darkRedLinearLayout"
        app:layout_constraintEnd_toEndOf="@+id/whiteHeaderLinearLayout"
        app:layout_constraintTop_toTopOf="@+id/whiteHeaderLinearLayout"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/tud_logo" />

    <TextView
        android:id="@+id/roomNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/roomNumberTextView"
        android:textColor="@android:color/background_dark"
        android:textSize="76sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/whiteHeaderLinearLayout" />

</android.support.constraint.ConstraintLayout>